投稿機能実装完了

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,6 +10,7 @@
       <div class="col-md-3">
         <%= link_to 'Log in', '/sessions/new',class: 'btn btn-block btn-white' %>
       </div>
+      <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-white' %>
     </div>
   </div>
 </div>
