お気に入り機能実装完了

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,6 +1,6 @@
 <div class="topic-index-wrapper">
   <div class="container">
-    <% @topics.each do |topic| %>
+    <% @favorite_topics.each do |topic| %>
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
@@ -8,11 +8,6 @@
               <%= topic.user.name %>
             </h2>
 
-            <% if !topic.favorite_users.include?(current_user) %>
-              <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
-                <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
-              <% end %>
-            <% end %>
             <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
               <%= topic.description %>
@@ -21,7 +16,7 @@
         </div>
         <%= link_to 'トップページ', '/',class: 'btn btn-block btn-black' %>
         <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-black' %>
-        <%= link_to 'お気に入り一覧', '/favorites',class: 'btn btn-block btn-black' %>
+        <%= link_to '投稿一覧', '/topics',class: 'btn btn-block btn-black' %>
       </div>
     <% end %>
   </div>
