--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -15,6 +15,8 @@
 
         <% end %>
       </div>
+      <%= link_to 'トップページ', '/',class: 'btn btn-block btn-black' %>
+      <%= link_to '投稿一覧', '/topics',class: 'btn btn-block btn-black' %>
     </div>
   </div>
 </div>
