--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,12 +5,11 @@
     <h2 class="text-white">Classum is a service that you can post your class summary.</h2>
     <div class="row">
       <div class="col-md-offset-3 col-md-3">
-        <%= link_to 'Sign in', '/users/new', class: 'btn btn-block btn-white' %>
+        <%= link_to 'サインイン', '/users/new', class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
-        <%= link_to 'Log in', '/sessions/new',class: 'btn btn-block btn-white' %>
+        <%= link_to 'ログイン', '/sessions/new',class: 'btn btn-block btn-white' %>
       </div>
-      <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-white' %>
     </div>
   </div>
 </div>
