--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -149,3 +149,16 @@ form-control {
   font-size: 20px;
   background-color: rgba(0,0,0,0.0);
 }
+
+
+.comment-content {
+  display: block;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.comment-title {
+  font-size: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
