--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,8 +3,8 @@
   <div class="container top-hero-container">
     <h1 class="text-white">“大学の講義に『能動的アウトプット』を”</h1>
     <h2 class="text-white">Classum is a service that you can post your class summary.</h2>
-    <div class="row">
-      <div class="col-md-offset-3 col-md-3">
+    <div class="row flex">
+      <div class="col-md-3 col-md-offset-3">
         <%= link_to 'サインイン', '/users/new', class: 'btn btn-block btn-white' %>
       </div>
       <div class="col-md-3">
