投稿詳細機能実装完了済

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,12 @@
           <div class="topic-time">
             <%= @topics.created_at %>
           </div>
+          <h1 class="comment-title">コメント</h1>
+          <% @topics.comments.each do |comment| %>
+            <p class="comment-content">
+              <%= comment.content %>
+            </p>
+          <% end %>
         </div>
       </div>
     </div>
