--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -195,6 +195,7 @@ h1, h2 {
     }
 
     .topic-text {
+
       padding-right: 20px;
       padding-left: 20px;
     }
@@ -210,4 +211,10 @@ h1, h2 {
       margin-left: 20px;
     }
   }
+}
+
+.topic-description {
+  font-size: 30px;
+  padding-left: 15px;
+  padding-bottom: 15px;
 }
