--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -4,13 +4,14 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
           <p>
-            <%= @topics.description %>
+            <%= @topic.description %>
           </p>
           <div class="topic-time">
-            <%= @topics.created_at %>
+            <%= @topic.created_at %>
           </div>
+          <%= link_to("編集", "/topics/#{@topic.id}/edit") %>
           <h1 class="comment-title">コメント</h1>
-          <% @topics.comments.each do |comment| %>
+          <% @topic.comments.each do |comment| %>
             <p class="comment-content">
               <%= comment.content %>
             </p>
