--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= link_to 'ログイン', '/sessions/new',class: 'btn btn-block btn-black' %>
     <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-black' %>
     <%= link_to '投稿一覧', '/topics',class: 'btn btn-block btn-black' %>
-    <%= link_to 'お気に入り一覧', '/favorites',class: 'btn btn-block btn-black' %>
+    <%= link_to 'お気に入り', '/favorites',class: 'btn btn-block btn-black' %>
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <%= flash[:notice] %>
