--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -4,14 +4,30 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
+            <h1 class="topic-user-name">名前</h1>
             <h2 class="topic-author">
               <%= link_to(topic.user.name, "/users/#{topic.user.id}") %>
             </h2>
 
-            <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
             <p class="topic-text">
-              <%= topic.description %>
+              <h1 class="topic-name">投稿内容</h1>
+              <div class="topic-description">
+                <%= link_to(topic.description, "/topics/#{topic.id}" ) %>
+              </div>
+
+              <%= link_to comments_path(topic_id: topic.id),method: :get do %>
+                <%= image_tag 'icons/comment.png', class: 'topic-index-icon'%>
+              <% end %>
+
+              <h1 class="comment-title">コメント</h1>
+                <% topic.comments.each do |comment| %>
+              <p class="comment-content">
+                <%= comment.content %>
+              </p>
+            <% end %>
+
             </p>
+
           </div>
         </div>
       </div>
