--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,14 @@
   </head>
 
   <body>
-    <%= link_to 'トップページ', '/',class: 'btn btn-block btn-black' %>
-    <%= link_to 'サインイン', '/users/new', class: 'btn btn-block btn-black' %>
-    <%= link_to 'ログイン', '/sessions/new',class: 'btn btn-block btn-black' %>
-    <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-black' %>
-    <%= link_to '投稿一覧', '/topics',class: 'btn btn-block btn-black' %>
-    <%= link_to 'お気に入り', '/favorites',class: 'btn btn-block btn-black' %>
+    <div class="top-command">
+      <%= link_to 'トップページ', '/',class: 'btn btn-block btn-black' %>
+      <%= link_to 'サインイン', '/users/new', class: 'btn btn-block btn-black' %>
+      <%= link_to 'ログイン', '/sessions/new',class: 'btn btn-block btn-black' %>
+      <%= link_to '新規投稿', '/topics/new',class: 'btn btn-block btn-black' %>
+      <%= link_to '投稿一覧', '/topics',class: 'btn btn-block btn-black' %>
+      <%= link_to 'お気に入り', '/favorites',class: 'btn btn-block btn-black' %>
+    </div>
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <%= flash[:notice] %>
