--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,17 +4,25 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <div class="topic-index-single">
+
+
+            <div class="topic-description">
+              <%= link_to(topic.title, "/topics/#{topic.id}" ) %>
+            </div>
+
             <h1 class="topic-user-name">名前</h1>
             <h2 class="topic-author">
               <%= link_to(topic.user.name, "/users/#{topic.user.id}") %>
             </h2>
 
 
-
             <p class="topic-text">
+
+
+
               <h1 class="topic-name">投稿内容</h1>
               <div class="topic-description">
-                <%= link_to(topic.description, "/topics/#{topic.id}" ) %>
+                <%= topic.description %>
               </div>
 
               <% if !topic.favorite_users.include?(current_user) %>
@@ -31,6 +39,7 @@
               <h1 class="comment-title">コメント</h1>
                 <% topic.comments.each do |comment| %>
               <p class="comment-content">
+                <%=  comment.user.name + ":" %>
                 <%= comment.content %>
               </p>
             <% end %>
