--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -7,6 +7,8 @@
 
 
           <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_area :title, class: 'form-control' %>
             <%= f.label :description %>
             <%= f.text_area :description, class: 'form-control' %>
           </div>
