--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -3,6 +3,11 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
+
+          <p>
+            <%= @topic.title %>
+          </p>
+
           <p>
             <%= @topic.description %>
           </p>
