--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="main user-show">
+<div class="user-show-wrapper">
   <div class="container">
     <div class="user">
       <h2>Name</h2>
