--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,5 +1,5 @@
 <div class="topic-new-wrapper" >
-  <div class="container">
+  <div class="topics-new-container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">講義の要約を投稿しよう</h1>
@@ -13,7 +13,7 @@
             <%= f.text_area :description, class: 'form-control' %>
           </div>
 
-          <%= f.submit '投稿', class: 'btn btn-black btn-block' %>
+          <%= f.submit '投稿', class: 'btn btn-white btn-block' %>
 
         <% end %>
       </div>
