--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="users-edit-wrapper">
-  <div class="container">
+  <div class="users-edit-container">
     <div class="form-heading">アカウント編集</div>
     <div class="form users-form">
       <div class="form-body">
