--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="users-new-wrapper">
-  <div class="container">
+  <div class="users-new-container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
         <h1 class="text-center text-white">Sign in</h1>
@@ -23,7 +23,7 @@
 
           <%= f.submit "登録", class: 'btn-block btn-white' %>
         <% end %>
-        <%= link_to 'ログインはこちら', '/sessions/new',class: 'text-white' %>
+        <%= link_to 'ログインはこちら', '/sessions/new',class: 'text-white sub-text' %>
       </div>
     </div>
   </div>
