--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,38 +1,23 @@
 <div class="topic-index-wrapper">
   <div class="container">
-    <% @favorite_topics.each do |topic| %>
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <div class="topic-index-single">
-            <h1 class="topic-user-name">名前</h1>
-            <h2 class="topic-author">
-              <%= link_to(topic.user.name, "/users/#{topic.user.id}") %>
-            </h2>
 
-            <p class="topic-text">
-              <h1 class="topic-name">投稿内容</h1>
-              <div class="topic-description">
-                <%= topic.description %>
-              </div>
+    <% provide(:title, '要約を探す') %>
+    <h1>要約を探す</h1>
 
-              <%= link_to comments_path(topic_id: topic.id),method: :get do %>
-                <%= image_tag 'icons/comment.png', class: 'topic-index-icon'%>
-              <% end %>
-
-              <h1 class="comment-title">コメント</h1>
-                <% topic.comments.each do |comment| %>
-              <p class="comment-content">
-                <%=  comment.user.name %>
-                <%= comment.content %>
-                <%= link_to("削除", "/comments/#{comment.id}/destroy", {method: "post"}) %>
-              </p>
-            <% end %>
-
-            </p>
-
-          </div>
-        </div>
+    <%= search_form_for @search  do |f| %>
+      <div class="form-group">
+        <%= f.label :title_cont, "Title" %>
+        <%= f.text_field :title_cont, class: "form-control" %>
       </div>
+      <div class="btn btn-black btn-block"><%= f.submit "Search" %></div>
     <% end %>
-  </div>
-</div>
+
+    <% if @result.any? %>
+      <%= render :partial => "result", :locals => { title: @result } %>
+    <% end %>
+
+    <% if @result.nil? %>
+      <ul class="topics">
+        <%= render @favorite_topics %>
+      </ul>
+    <% end %>
