--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -8,9 +8,9 @@
 
           <div class="form-group">
             <%= f.label :title %>
-            <%= f.text_area :title, class: 'form-control' %>
+            <%= f.text_area :title, class: 'title-form-control' %>
             <%= f.label :description %>
-            <%= f.text_area :description, class: 'form-control' %>
+            <%= f.text_area :description, class: 'description-form-control' %>
           </div>
 
           <%= f.submit '投稿', class: 'btn btn-white btn-block' %>
