--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
-<div class="topic-new-wrapper">
-  <div class="container">
+<div class="comment-new-wrapper">
+  <div class="comment-new-container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Comment</h1>
@@ -11,7 +11,7 @@
             <%= f.hidden_field :topic_id, :value=> @comment.topic_id %>
           </div>
 
-            <%= f.submit 'コメント', class: 'btn-black' %>
+            <%= f.submit 'コメント', class: 'comment-action' %>
           <% end %>
       </div>
     </div>
