--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,27 +1,22 @@
 <div class="topic-show-wrapper">
-  <div class="container">
+  <div class="topic-show-container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
 
-          <p>
-            <%= @topic.title %>
-          </p>
+          <h2 class="form-group-title">
+            Title: <%= @topic.title %>
+          </h2>
 
-          <p>
-            <%= @topic.description %>
-          </p>
+          <h2 class="form-group-content">
+            Content: <%= @topic.description %>
+          </h2>
           <div class="topic-time">
             <%= @topic.created_at %>
           </div>
-          <%= link_to("編集", "/topics/#{@topic.id}/edit") %>
-          <%= link_to("削除", "/topics/#{@topic.id}/destroy", {method:"post"}) %>
-          <h1 class="comment-title">コメント</h1>
-          <% @topic.comments.each do |comment| %>
-            <p class="comment-content">
-              <%= comment.content %>
-            </p>
-          <% end %>
+          <%= link_to("編集", "/topics/#{@topic.id}/edit", class: "text-white") %>
+          <%= link_to("削除", "/topics/#{@topic.id}/destroy", {method:"post", class: "text-white"}) %>
+
         </div>
       </div>
     </div>
